validation for help and admin page in activity player

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
@@ -26,8 +26,8 @@
                             <span class="activity-name"><!-- Activity Name --></span>
                         </div>
                     <div class="row">
-                        <a class="view-admin-page right orange-button-template" data-current-activity-id="" > View Teacher's page</a>
-                        <a class="view-help-page right orange-button-template" data-current-activity-id="" > View Help page</a>
+                        <a style="display:none" class="view-admin-page right orange-button-template" data-current-activity-id="" > View Teacher's page</a>
+                        <a style="display:none" class="view-help-page right orange-button-template" data-current-activity-id="" > View Help page</a>
                         <a style="margin-top:10px!important" class="save_edit_activity right orange-button-template" data-current-activity-id="" > Edit </a>
                     </div>   
                      <!-- commenting following as activities now will be created/edited
@@ -733,7 +733,10 @@ This will not be used because now only existing activities will be added.
                   data_dict = JSON.parse(data);
                   $('#activity-content').html(data_dict.content);
                    MathJax.Hub.Queue(["Typeset",MathJax.Hub,'activity-content']);
-                    $("#info-page-area").html("");          
+                    $("#info-page-area").html("");
+                    $(".view-admin-page").css('display','none')
+                    $(".view-help-page").css('display','none')
+
                   return true
               }
           });
@@ -777,7 +780,45 @@ This will not be used because now only existing activities will be added.
             MathJax.Hub.Queue(["Typeset",MathJax.Hub,'actvity-editor-headerid']);
 
             getNodeData(activity_id);
-            
+           
+            $.ajax({
+                      type: "POST",
+
+                      url: "{% url 'if_relation_exists' group_id %}",
+                      datatype: "html",
+                      data:{
+                        'csrfmiddlewaretoken': "{{csrf_token}}",
+                        'node_id':activity_id,
+                        'rel_name':'has_admin_page'
+
+                      },
+                        success: function(data) {
+                            if(data == "success"){
+                                $(".view-admin-page").css('display','block')
+                                
+                            }
+
+                      }
+            });
+
+            $.ajax({
+                      type: "POST",
+
+                      url: "{% url 'if_relation_exists' group_id %}",
+                      datatype: "html",
+                      data:{
+                        'csrfmiddlewaretoken': "{{csrf_token}}",
+                        'node_id':activity_id,
+                        'rel_name':'has_help'
+
+                      },
+                        success: function(data) {
+                        if(data == "success"){
+                        $(".view-help-page").css('display','block')
+                        }
+                      }
+            });
+
             $(".view-admin-page").click(function(event){
                           
                 $.ajax({
