spaces aded in text

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/get_info_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/get_info_pages.html
@@ -14,7 +14,7 @@
                 
               {% endif %}
             <div class="related-content-header">
-              <span>Related {% if page_type == "has_admin_page" %}Teacher's Page {% elif  page_type == "has_help" %}
+              <span> &nbsp;&nbsp;&nbsp;Related {% if page_type == "has_admin_page" %}Teacher's Page {% elif  page_type == "has_help" %}
               Help Topic {% endif %}
               </span>
                 <span class="related-content-title">
