--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gbase.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gbase.html
@@ -40,6 +40,9 @@
     <!-- jQuery -->
     <script src="/static/ndf/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/static/ndf/bower_components/blockui/jquery.blockUI.js"></script>
+    <script type="text/javascript" src="/static/ndf/bower_components/jqtree/tree.jquery.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/ndf/bower_components/jqtree/jqtree.css">
+
 
     <title>{{ site.SITE_NAME }} - {% block title %} {% endblock %}</title>
     {% block head %}{% endblock %}
