added css for horizontal overflow

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -29,6 +29,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     font-family: 'OpenSans-Regular', sans-serif;
+    overflow-x: hidden;
 }
 
 
