added safe filter for content on cards

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/card_group.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/card_group.html
@@ -21,7 +21,7 @@
             <span class="unit_title">{{node.name}}</span>
     </div>
     <div class="unit_desc">
-        {{node.content}}
+        {{node.content|safe}}
     </div>
     {% comment %}
     <div class="unit_breif">
