--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -3785,3 +3785,90 @@ ul.nav_menu_1 li:hover {
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
 }
+
+/* line 3961, ../../../scss/_clix2017.scss */
+.mydesk_page .page_banner {
+  width: 100%;
+  height: 150px;
+  background-image: url("/static/ndf/images/mydesk_banner.png");
+  background-size: 100% 100%;
+  position: relative;
+}
+/* line 3968, ../../../scss/_clix2017.scss */
+.mydesk_page .page_banner:before {
+  content: ' ';
+  background-color: rgba(0, 0, 0, 0.1);
+  opacity: .5;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 10;
+  box-shadow: inset 0 0 40px rgba(0, 0, 0, 0.2);
+}
+/* line 3982, ../../../scss/_clix2017.scss */
+.mydesk_page .page_banner .banner_profile {
+  position: absolute;
+  bottom: 30px;
+  left: 40px;
+}
+/* line 3987, ../../../scss/_clix2017.scss */
+.mydesk_page .page_banner .banner_profile .buddy_logo {
+  display: inline-block;
+  margin-right: 10px;
+  height: 100px;
+  border-radius: 5px;
+  overflow: hidden;
+}
+/* line 3994, ../../../scss/_clix2017.scss */
+.mydesk_page .page_banner .banner_profile .buddy_logo svg {
+  height: 100px;
+  width: 100px;
+}
+/* line 3998, ../../../scss/_clix2017.scss */
+.mydesk_page .page_banner .banner_profile .buddy_logo svg path {
+  fill: #7a422a;
+}
+/* line 4003, ../../../scss/_clix2017.scss */
+.mydesk_page .page_banner .banner_profile .banner_heading {
+  color: #fff;
+  display: inline-block;
+  vertical-align: top;
+}
+/* line 4008, ../../../scss/_clix2017.scss */
+.mydesk_page .page_banner .banner_profile .banner_heading .buddy_name {
+  font-size: 23px;
+  display: block;
+  margin-bottom: 10px;
+}
+/* line 4016, ../../../scss/_clix2017.scss */
+.mydesk_page .page_menu {
+  border-bottom: 1px solid #e5e5e5;
+}
+/* line 4019, ../../../scss/_clix2017.scss */
+.mydesk_page .page_menu li {
+  padding: 12px 20px 9px;
+}
+
+/* line 4028, ../../../scss/_clix2017.scss */
+ul.nav_menu_1 {
+  margin-bottom: 0px;
+  background-color: #fff;
+}
+/* line 4031, ../../../scss/_clix2017.scss */
+ul.nav_menu_1 li {
+  list-style-type: none;
+  display: inline-block;
+  padding: 12px 12px 9px;
+  color: #ce7869;
+  cursor: pointer;
+  font-size: 18px;
+  letter-spacing: 0.8px;
+  border-bottom: 3px solid transparent;
+}
+/* line 4041, ../../../scss/_clix2017.scss */
+ul.nav_menu_1 li:hover {
+  border-bottom: 3px solid #ffc14e;
+}
