--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/horizontal_card.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/horizontal_card.html
@@ -4,13 +4,7 @@
         <span class="card_title">{{node.name}}</span>
 </div>
 
-{% if first_arg and second_arg and third_arg %}
-        <a href="{% url url_name first_arg second_arg third_arg %}{{search_url_text|safe}}"/>
-    {% elif first_arg and second_arg %}
-        <a href="{% url url_name first_arg second_arg %}{{search_url_text|safe}}"/>
-    {% elif first_arg %}
-        <a href='{% url url_name first_arg %}{{search_url_text|safe}}'/>
-{% endif %}
+
     <div class="card_summary">
         <div class="card_section">
             <p class="module_brief">
@@ -21,21 +15,27 @@
             <span class="card_label">
                 Subjects
             </span class="card_label">
-            <p class="ellipsis">English</p>
+            <p class="ellipsis"></p>
                 <span class="card_label">
                     Grades
                 </span class="card_label">
-            <p class="ellipsis">8th, 9th</p>
+            <p class="ellipsis"></p>
                 <span class="card_label">
                     Units
                 </span class="card_label">
-            <p class="ellipsis">10</p>
+            <p class="ellipsis"></p>
         </div>
         <div class="card_section">
-            <a href="#" class="text-button-blue">
+                {% if first_arg and second_arg and third_arg %}
+                    <a href="{% url url_name first_arg second_arg third_arg %}{{search_url_text|safe}}"/>
+                {% elif first_arg and second_arg %}
+                    <a href="{% url url_name first_arg second_arg %}{{search_url_text|safe}}"/>
+                {% elif first_arg %}
+                    <a href='{% url url_name first_arg %}{{search_url_text|safe}}'/>
+                {% endif %}
                 <i class="fa fa-book"></i>
                 <span>Explore</span>
-            </a>
+                </a>
         </div>
     </div>
 </div>
