--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/module_detail.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/module_detail.html
@@ -8,7 +8,7 @@
 
 		<div class="title-strip">
 			Showing all Units in<h7 class="text-button-blue">{{node.name}} </h7><br/>
-			Module Description:<h7 class="text-button-blue">{{node.content}}</h7>
+			Module Description:<h7 class="text-button-blue">{{node.content|safe}}</h7>
 			<a style="float:right" href="{% url 'module_edit' group_id node.pk %}"><i class="fa fa-pencil"></i> Edit</a>
 		</div>
 
