--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
@@ -1,6 +1,7 @@
 {% extends "ndf/gbase.html" %}
 {% load i18n %}
 
+{% block title %} {{lesson_node.name}}  {% endblock %}
 
 
 {% block body_content %}
@@ -11,7 +12,7 @@
         </div><div class="header_icon_block ">
             <a href="#"><i class="fa fa-list-ul thumbnails header_icon"></i></a>
         </div><div class="header_title header_text_block">
-            Invitation 2 CLIx in English
+            {{group_name}}
         </div><div class="">
         </div><div class="new_note header_text_block">
             <a href="#">
@@ -40,13 +41,14 @@
           <div class="small-2 columns">
             <div class="course_tree">
               <div class="lesson-title">
-                  Lesson Title
+                  <b>{{lesson_node.name}}</b>
               </div>
               <div class="activity-title">
-                <li class="active">Activity Title</li>
-                <li>Activity Title</li>
-                <li>Activity Title</li>
-                <li>Activity Title</li>
+              {% for each in unit_resources_list_of_dict %}
+                
+                 <li  {% if each.pk == node.pk %} class="active" {% endif %}> <a href="{% url 'activity_player_detail' group_id lesson_node.pk each.pk %}">{{each.name}}</a></li>
+                
+              {% endfor %}
               </div>
               </div>
           </div>
@@ -58,25 +60,13 @@
               <a href="#">Translate</a>
               </div>
               <div class="activity_page_rendered">
-              Lorem Ipsum
-              "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
-              "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."
-
-              What is Lorem Ipsum?
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                activity name : {{node.name}}
+                {{node.content|safe}}
               </div>
             </div>
           </div>
         </div>
       </div>
-</div>
-
-
-
-
-
-    
-        
-             
+</div>             
 
 {% endblock %}
