--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_content.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_content.html
@@ -5,49 +5,60 @@
     </div>
     <script type="text/javascript">
         $(function(){
-            var data = [
-                {
-                    label: 'Let us learn together',
-                    id: 1,
-                    type: 'unit-name',
-                    children: [
-                        {
-                            label: 'Let us Begin!',
-                            id: 2,
-                            type: 'activity-group',
-                            children: [{
-                                label: 'About the Course',
-                                id: 3,
-                                type: 'activity-name',
-                            }]
-                        }
-                    ]
-                },
-                {
-                    label: 'Module 1: Introduction and Indic Typing',
-                    id: 4,
-                    type: 'unit-name',
-                    children: [
-                        { label: 'child3', id: 5, type: 'activity-group'}
-                    ]
-                },
-                {
-                    label: 'Module 2: Analysing with Spreadsheets',
-                    id: 6,
-                    type: 'unit-name',
-                    children: [
-                        { label: 'child3', id: 7, type: 'activity-group' }
-                    ]
-                }
-            ];
+            // var data = [
+            //     {
+            //         label: 'Let us learn together',
+            //         id: 1,
+            //         type: 'unit-name',
+            //         children: [
+            //             {
+            //                 label: 'Let us Begin!',
+            //                 id: 2,
+            //                 type: 'activity-group',
+            //                 children: [{
+            //                     label: 'About the Course',
+            //                     id: 3,
+            //                     type: 'activity-name',
+            //                 }]
+            //             }
+            //         ]
+            //     },
+            //     {
+            //         label: 'Module 1: Introduction and Indic Typing',
+            //         id: 4,
+            //         type: 'unit-name',
+            //         children: [
+            //             { label: 'child3', id: 5, type: 'activity-group'}
+            //         ]
+            //     },
+            //     {
+            //         label: 'Module 2: Analysing with Spreadsheets',
+            //         id: 6,
+            //         type: 'unit-name',
+            //         children: [
+            //             { label: 'child3', id: 7, type: 'activity-group' }
+            //         ]
+            //     }
+            // ];
             var course_data = {{unit_structure|safe}};
             $('#tree1').tree({
                 data: course_data,
                 autoOpen: false,
                 dragAndDrop: false,
+                closedIcon: $('<i class="fa fa-plus" aria-hidden="true"></i>'),
+                openedIcon: $('<i class="fa fa-minus" aria-hidden="true"></i>'),
                 onCreateLi: function(node, $li){
                     $li.addClass('course-tree-node course-'+node.type);
-                    console.log(node);
+                    // console.log(node);
+                    // alert(node.parent.id + "node.parent")
+                    // alert(node.parent + "node")
+                    if (node.type == "activity-group"){
+                        url = '/{{group_id}}/course/activity_player/' + node.parent.id + '/' + node.id
+                        // alert(node.name)
+                        $li.find('.jqtree-title')
+                            .html('<a href="'+url+'" id='+node.id +' class="redirect_to_unitplayer"><span>' + $li.find('.jqtree-title').html() + ' </a></span>');
+                    }
+
                 }
             });
         })
