--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_event_group.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_event_group.html
@@ -331,16 +331,15 @@ this template is modified. So for the fields in the template it supports -
               
           <div class="small-4 columns">
             <label for="right-label" class="inline">{% trans "Upload thumbnail" %}</label>
-            <small><i>(.svg images are currently not supported)</i></small>
           </div>
           <div class="small-8 columns">
           {% if logo_img_node %}
             <a target="_blank" href="{% url 'read_file' group_id logo_img_node.pk %}">{% trans "View existing thumbnail " %}</a>
             <input type="button" class="button tiny" id="change_logo" value="Edit">
             <input type="button" class="button tiny hide" id="cancel_change_logo" value="Cancel">
-            <input type="file" name="docFile" id="docFile" class="hide" accept="image/*"/>
+            <input type="file" name="filehive" id="filehive" class="hide" accept="image/*"/>
           {% else %}
-          <input type="file" name="docFile" id="docFile" accept="image/*"/>
+          <input type="file" name="filehive" id="filehive" accept="image/*"/>
           {% endif %}
 
           </div>
@@ -425,24 +424,14 @@ this template is modified. So for the fields in the template it supports -
   });
   $(document).on('click',"#change_logo",function(){
     $("#cancel_change_logo").removeClass("hide");
-    $("#docFile").removeClass("hide");
+    $("#filehive").removeClass("hide");
   })
 
   $(document).on('click',"#cancel_change_logo",function(){
     $("#cancel_change_logo").addClass("hide");
-    $("#docFile").addClass("hide");
-    $("#docFile").val("")
+    $("#filehive").addClass("hide");
+    $("#filehive").val("")
   })
-
-  $("#docFile").change(function(event) {
-    file_mime_type = this.files[0].type;
-    if(file_mime_type.indexOf("svg") >= 0 ){
-      alert("{% trans '.svg images are currently not supported' %}")
-      $("#docFile").val("");
-      event.preventDefault();
-    }
-  });
-
 
 // </script>
 {% endblock %}
