--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
@@ -8,30 +8,35 @@
 
 <div class="activity_player_secondary_header activity_player_header">
         <div class="header_icon_block back_button">
-            <a href="#"><i class="fa fa-angle-left header_icon"></i></a>
-        </div><div class="header_icon_block ">
-            <a href="#"><i class="fa fa-list-ul thumbnails header_icon"></i></a>
-        </div><div class="header_title header_text_block">
+            <a href="{% url 'course_content' group_id  %}"><i class="fa fa-angle-left header_icon"></i></a>
+        </div>
+        <div class="header_title header_text_block">
             {{group_name}}
-        </div><div class="">
-        </div><div class="new_note header_text_block">
+        </div>
+        <div class="new_note header_text_block">
             <a href="#">
                 <i class="fa fa-edit header_icon"></i>&nbsp;
                 WRITE A NEW NOTE
             </a>
-        </div><div class="pagination prev_button header_text_block">
-            <a href="#">
-                <i class="fa fa-angle-left header_icon"></i>
-                &nbsp;PREV
-            </a>
-        </div><div class="pagination page_count header_text_block">
-            2 OF 3
+        </div>
+        <div class="pagination prev_button header_text_block">
+            {% if resource_prev_id %}
+              <a href="{% url 'activity_player_detail' group_id lesson_node.pk resource_prev_id %}"> 
+                  <i class="fa fa-angle-left header_icon"></i>
+                  &nbsp;PREV
+              </a>
+            {% endif %}
         </div>
         <div class="pagination page_count header_text_block">
-            <a href="#">
-                NEXT&nbsp;
-                <i class="fa fa-angle-right header_icon"></i>
-            </a>
+            {{resource_index|add:'1'}} OF {{lesson_node.collection_set|length}}
+        </div>
+        <div class="pagination page_count header_text_block">
+            {% if resource_next_id %}
+              <a href="{% url 'activity_player_detail' group_id lesson_node.pk resource_next_id %}">
+                  NEXT&nbsp;
+                  <i class="fa fa-angle-right header_icon"></i>
+              </a>
+            {% endif %}
         </div>
 </div>
 
@@ -45,28 +50,75 @@
               </div>
               <div class="activity-title">
               {% for each in unit_resources_list_of_dict %}
-                
                  <li  {% if each.pk == node.pk %} class="active" {% endif %}> <a href="{% url 'activity_player_detail' group_id lesson_node.pk each.pk %}">{{each.name}}</a></li>
-                
               {% endfor %}
               </div>
               </div>
           </div>
           <div class="small-9 columns">
             <div class="course_editor_section">
-              <div class="input_links">
-              <a href="#">Discuss</a>
-              <a href="#"> Related Help</a>
-              <a href="#">Translate</a>
+              <div class="input_links row">
+              {% for each in node.relation_set %}
+                {% if "has_help" in each %}
+                  <button type="button" class="orange-button student-page right"> Student Help</button>
+                {% endif %}
+                {% if "has_admin_page" in each %}
+                  <button type="button" class="orange-button admin-page right"> Teacher's Help</button>
+                {% endif  %}
+              {% endfor %}
+              <button type="button" class="orange-button discuss right"> discuss</button>
+              <button type="button" class="orange-button translate right"> Translate</button>
+
               </div>
               <div class="activity_page_rendered">
                 activity name : {{node.name}}
                 {{node.content|safe}}
+              </div>
+              <div id="info-page-area">
+                
               </div>
             </div>
           </div>
         </div>
       </div>
 </div>             
+<script type="text/javascript">
+  $(".admin-page").click(function(event){
+          $.ajax({
+                      type: "POST",
+                      url: "{% url 'get_info_pages' group_id %}",
+                      datatype: "html",
+                      data:{
+                        'csrfmiddlewaretoken': "{{csrf_token}}",
+                        'node_id':'{{node.pk}}',
+                        'page_type':'has_admin_page'
 
+                      },
+                        success: function(data) {
+                        // $('#info-page-area').html(data);
+                        parent = $("#info-page-area");
+                        parent.html(data);
+                      }
+                    });
+      });
+  
+  $(".student-page").click(function(event){
+          $.ajax({
+                      type: "POST",
+                      url: "{% url 'get_info_pages' group_id %}",
+                      datatype: "html",
+                      data:{
+                        'csrfmiddlewaretoken': "{{csrf_token}}",
+                        'node_id':'{{node.pk}}',
+                        'page_type':'has_help'
+
+                      },
+                        success: function(data) {
+                        // $('#info-page-area').html(data);
+                        parent = $("#info-page-area");
+                        parent.html(data);
+                      }
+                    });
+      });
+</script>
 {% endblock %}
